# ClockifyCLI

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: clockify-cli-enterprise-brief.md  ralph-loop.local.md  ralph-progress.md
cli_anything/clockify/: __init__.py  __main__.py  clockify_cli.py
cli_anything/clockify/commands/: __init__.py  _helpers.py  approval.py  clients.py  entries.py  expenses.py  invoices.py  misc.py  projects.py  reports.py  scheduling.py  shared_reports.py  tags.py  tasks.py  time_off.py  timer.py  users.py  webhooks.py  workspaces.py
cli_anything/clockify/core/: clockify_backend.py
cli_anything/clockify/core/mixins/: __init__.py  _approval.py  _base.py  _catalog.py  _entries.py  _expenses.py  _invoices.py  _misc.py  _projects.py  _reports.py  _scheduling.py  _shared_reports.py  _tasks.py  _time_off.py  _timer.py  _users.py  _webhooks.py  _workspaces.py
cli_anything/clockify/tests/: TEST.md  conftest.py  test_approval.py  test_backend.py  test_cli_coverage.py  test_cli_gaps.py  test_cli_gaps_2.py  test_clients.py  test_custom_fields.py  test_entities.py  test_entries.py  test_entries_extra.py  test_expenses.py  test_groups.py  test_holidays.py  test_invoices.py  test_openapi_parity.py  test_parity_gaps.py  test_projects.py  test_reports.py  test_scheduling.py  test_shared_reports.py  test_tags.py  test_tasks.py  test_time_off.py  test_time_off_extra.py  test_timer.py  test_users.py  test_webhooks.py  test_workspaces.py
cli_anything/clockify/utils/: formatters.py  repl_skin.py  session.py  time_utils.py
